--- a/style.css
+++ b/style.css
@@ -179,10 +179,12 @@ section {
 .section__text {
   align-self: center;
   text-align: center;
+  margin-left: 10px;
 }
 
 .section__text p {
   font-weight: 600;
+  
 }
 
 .section__text__p1 {
@@ -938,3 +940,5 @@ body {
 .dark-mode .skill-item p {
   color: #ccc;
 }
+
+
